import java.util.ArrayList;

public interface Database {
    ArrayList<String> readUserData(String path);
}
