public class Main {
    public static void main(String[] args) {
        Program program = new Program();
        program.run();
    }
}
