public class MainMenu extends AMenu{
    @Override
    void display() {
        textUI.displayMessage("You are in main menu");
    }
}