public class Program {
    public void run() {
        StartMenu startMenu = new StartMenu();
        startMenu.display();

        MainMenu mainMenu = new MainMenu();
        mainMenu.display();
    }
}
