import javax.print.attribute.standard.Media;
import java.util.ArrayList;

public class SavedList implements List{
    @Override
    public ArrayList<AMedia> getMediaList() {
        return null;
    }

    @Override
    public void addMedia(Media media) {

    }

    @Override
    public void deleteMedia(Media media) {

    }

    @Override
    public void saveList(ArrayList<AMedia> listToSave) {

    }

    @Override
    public void updateList(ArrayList<AMedia> listToUpdate) {

    }
}
